# esp32-ai-voice

./: .gitignore  CMakeLists.txt  PROJECT_ANALYSIS.md  app.py  check_and_fix_config.sh  fastapi_app.py  fix_flash.sh  fix_partition.sh  loopback_server.py  partitions.csv  restore_config.sh  sdkconfig.defaults.esp32s3  simple_server.py
main/: CMakeLists.txt  Kconfig.projbuild  audio_manager.cc  audio_manager.h  bsp_board.cc  bsp_board.h  idf_component.yml  main.cc  main.cc.backup  main_patch.txt  websocket_client.cc  websocket_client.h  wifi_manager.cc  wifi_manager.h
